add proposal requirements

--- a/p8105_fp_ds100.Rmd
+++ b/p8105_fp_ds100.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "p8105_fp_ds100"
-author: "Catherine"
+author: "Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu"
 date: "11/5/2018"
 output: github_document
 ---
@@ -13,20 +13,21 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r}
-test = c("Go! DS100!")
-test
-happy = 100
-happy
-```
+## Proposal 
+(Writing proposal here!!)
+First, you will define your teams and propose a project. This proposal should be a half-page to a page in length and include:
+
+The group members (names and UNIs)
+The tentative project title
+The motivation for this project
+The intended final products
+The anticipated data sources
+The planned analyses / visualizations / coding challenges
+The planned timeline
+There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
 
 
-```{r}
-runif(100)
-```
-```{r}
-1+1
 
-```
+
 
 
