--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -8,8 +8,8 @@ Proposal
 
 (Writing proposal here!!) First, you will define your teams and propose a project. This proposal should be a half-page to a page in length and include:
 
-The group members (names and UNIs) &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD The tentative project title: mortality =======
+The group members (names and UNIs) The tentative project title: mortality
 
 first\_name: Junyuan last\_name\_name: Zheng
 
-The tentative project title &gt;&gt;&gt;&gt;&gt;&gt;&gt; bc208b035481bc47fd5bd1622e5b36420e6023f1 The motivation for this project The intended final products The anticipated data sources The planned analyses / visualizations / coding challenges The planned timeline There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
+The tentative project title The motivation for this project The intended final products The anticipated data sources The planned analyses / visualizations / coding challenges The planned timeline There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
