--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -1,15 +1,32 @@
 p8105\_fp\_ds100
 ================
-Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu
+Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu, Zhiqian Fang
 11/5/2018
 
 Proposal
 --------
 
-(Writing proposal here!!) First, you will define your teams and propose a project. This proposal should be a half-page to a page in length and include:
+#### The group members (names and UNIs)
 
-The group members (names and UNIs) The tentative project title: mortality
+|       |        |              |               |             |              |
+|:------|:-------|:-------------|:--------------|:------------|:-------------|
+| names | Yue Gu | Jianghui Lin | Junyuan Zheng | Jianyou Liu | Zhiqian Fang |
+| uni   | yg2625 | jl5172       | jz3036        | jl5296      | zf2212       |
 
-first\_name: Junyuan last\_name\_name: Zheng
+#### The tentative project title
 
-The tentative project title The motivation for this project The intended final products The anticipated data sources The planned analyses / visualizations / coding challenges The planned timeline There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
+Title: **1999 - 2016 U.S. Injury Mortality Analysis**
+
+#### The motivation for this project
+
+Motivation:
+
+#### The intended final products
+
+#### The anticipated data sources
+
+#### The planned analyses / visualizations / coding challenges
+
+#### The planned timeline
+
+There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
