--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -19,14 +19,18 @@ Title: **1999 - 2016 U.S. Injury Mortality Analysis**
 
 #### The motivation for this project
 
-Motivation:
+Motivation: Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death.
+
+reference: “Suicide Rising across the US.” Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, 11 June 2018, www.cdc.gov/vitalsigns/suicide/index.html.
 
 #### The intended final products
 
 #### The anticipated data sources
 
+<https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7>
+
 #### The planned analyses / visualizations / coding challenges
 
-#### The planned timeline
+We aim to analyze the suicide rate changes from 1999-2016 across different ages/races/locations. \#\#\#\# The planned timeline
 
 There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
