intended product. by jz

--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -25,12 +25,14 @@ reference: “Suicide Rising across the US.” Centers for Disease Control and P
 
 #### The intended final products
 
+The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Barplot plots would be shown to demonstrate potential trend according to sex, age, race, and injury mechanism across years.
+
 #### The anticipated data sources
 
 <https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7>
 
 #### The planned analyses / visualizations / coding challenges
 
-We aim to analyze the suicide rate changes from 1999-2016 across different ages/races/locations. \#\#\#\# The planned timeline
+We aim to analyze the suicide rate changes from 1999-2016 across different ages/races. \#\#\#\# The planned timeline
 
 There should be one proposal per group, written collaboratively using .Rmd (rendering to a GH document) in a dedicated GitHub repo. Conceptually, this is intended to review a project that is 10% complete.
