edit the intended final products

--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -25,7 +25,7 @@ reference: “Suicide Rising across the US.” Centers for Disease Control and P
 
 #### The intended final products
 
-The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Barplot plots would be shown to demonstrate potential trend according to sex, age, race, and injury mechanism across years.
+We will first present the trend of injury intent from 1999 to 2016 over all ages and races. Then, we will focus on suicide mortality. The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Barplot plots would be shown to demonstrate suicide potential trend according to sex, age, race, and injury mechanism across years.
 
 #### The anticipated data sources
 
