--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -15,11 +15,11 @@ Proposal
 
 #### The tentative project title
 
-Title: **1999 - 2016 U.S. Injury Mortality Analysis**
+Title: **1999 - 2016 U.S. Self-Inflicted Suicide Mortality Analysis**
 
 #### The motivation for this project
 
-Motivation: Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death.
+Motivation: Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant.
 
 #### The intended final products
 
@@ -31,4 +31,14 @@ We will first present the trend of injury intent from 1999 to 2016 over all ages
 
 #### The planned analyses / visualizations / coding challenges
 
-We aim to analyze the suicide rate changes from 1999-2016 across different ages/races. \#\#\#\# The planned timeline
+We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to decide whether or not the results are significant.
+
+#### The planned timeline
+
+| Time\_Period  | Task                                                                                                    |
+|:--------------|:--------------------------------------------------------------------------------------------------------|
+| Nov 5-8       | Research on background of dataset, read relevant references, and understand its structure and variables |
+| Nov 8-15      | Work on report - Load, clean, manipulate data; Create visualizations                                    |
+| Nov 15-22     | Work on report - Perform statistical analysis and summarize findings/conclusions                        |
+| Nov 22- Dec 6 | Work on website construction and screencast; Finalize report                                            |
+| Dec 6         | Submit everything!                                                                                      |
