--- a/p8105_fp_ds100.Rmd
+++ b/p8105_fp_ds100.Rmd
@@ -41,7 +41,7 @@ We will first present the trend of injury intent and injury mechanism from 1999 
 https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7
 
 #### The planned analyses / visualizations / coding challenges
-We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. 
+We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. Coding challenges may include choosing the correct statistical test for different types of variables; clear visulizations for data output; and website pages construction in github.
 
 #### The planned timeline
 ```{r time_table, echo = FALSE}
