Restructured the proposal to fit into one page and modified several sentences to be more clear stated - yg2625

--- a/p8105_fp_ds100.Rmd
+++ b/p8105_fp_ds100.Rmd
@@ -24,29 +24,24 @@ rbind(names, uni) %>%
   knitr::kable()
 ```
 
-#### The tentative project title
+#### Project title and Data source
 
-Title: __1999 - 2016 U.S. Self-Inflicted Suicide Mortality Analysis__
+Title: __1999 - 2016 U.S. Self-Inflicted Suicide Mortality Analysis__  
+Data: https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7
 
-#### The motivation for this project
+#### Motivation  
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age specific rate and related confidence interval.
 
-Motivation: 
-Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis with age specific rate and related confidence interval.
+#### Intended final products  
+The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Visulizations to the datasets will be included, such as barplots, boxplots, scatterplots and density plots across different sex, age, race and injury varied by years to demonstrate suicide potential.
 
-#### The intended final products
-
-We will first present the trend of injury intent and injury mechanism from 1999 to 2016 over all ages and races. Then, we will focus on suicide mortality. The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Visulizations to the datasets will be included, such as barplots, boxplots, scatterplots and density plots across different sex, age, race and injury varied by years to demonstrate suicide potential.
-
-#### The anticipated data sources
-https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7
-
-#### The planned analyses / visualizations / coding challenges
+#### Planned analyses / visualizations / coding challenges  
 We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. Coding challenges may include choosing the correct statistical test for different types of variables; clear visulizations for data output; and website pages construction in github.
 
-#### The planned timeline
+#### The planned timeline  
 ```{r time_table, echo = FALSE}
-Time_Period = c("Nov 5-8", "Nov 8-15", "Nov 15-22", "Nov 22- Dec 6", "Dec 6")
-Task = c("Research on background of dataset, read relevant references, and understand its structure and variables", "Work on report - Load, clean, manipulate data; Create visualizations", "Work on report - Perform statistical analysis and summarize findings/conclusions", "Work on website construction and screencast; Finalize report", "Submit everything!")
+Time_Period = c("11/05-11/08", "11/08-11/15", "11/15-11/22", "11/22-12/06", "12/06")
+Task = c("Research on background and relevant references of datasets, understand its structure and variables", "Load, clean, manipulate data; Create visualizations", "Work on report - Perform statistical analysis and summarize findings/conclusions", "Website construction and screencast; Finalize report", "Final Submission")
 cbind(Time_Period, Task) %>% 
   knitr::kable()
 ```
