--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -16,7 +16,7 @@ Proposal
 #### Project title and Data source
 
 Title: **1999 - 2016 U.S. Self-Inflicted Suicide Mortality Analysis**
-Data: <https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7>
+\[Data: <https://data.cdc.gov/NCHS/NCHS-Injury-Mortality-United-States/nt65-c7a7>\]
 
 #### Motivation
 
