--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -6,7 +6,7 @@ Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu, Zhiqian Fang
 Proposal
 --------
 
-#### The group members (names and UNIs)
+#### Group members (names and UNIs)
 
 |       |        |              |               |             |              |
 |:------|:-------|:-------------|:--------------|:------------|:-------------|
@@ -30,7 +30,7 @@ The final product of this project would be presented as a website containing dis
 
 We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. Coding challenges may include choosing the correct statistical test for different types of variables; clear visulizations for data output; and website pages construction in github.
 
-#### The planned timeline
+#### Planned timeline
 
 | Time\_Period | Task                                                                                               |
 |:-------------|:---------------------------------------------------------------------------------------------------|
