fix some small typos

--- a/p8105_fp_ds100.md
+++ b/p8105_fp_ds100.md
@@ -20,15 +20,15 @@ Title: **1999 - 2016 U.S. Self-Inflicted Suicide Mortality Analysis**
 
 #### Motivation
 
-Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age specific rate and related confidence interval.
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age-specific rate and related confidence interval.
 
 #### Intended final products
 
-The final product of this project would be presented as a website containing discription of our motivation, data source, statistical methods, and conclusion. Visulizations to the datasets will be included, such as barplots, boxplots, scatterplots and density plots across different sex, age, race and injury varied by years to demonstrate suicide potential.
+The final product of this project would be presented as a website containing descriptions of our motivation, data source, statistical methods, and conclusion. Visualizations to the datasets will be included, such as bar plots, boxplots, scatterplots and density plots across different sex, age, race, and injury varied by years to demonstrate suicide potential.
 
 #### Planned analyses / visualizations / coding challenges
 
-We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually, and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. Coding challenges may include choosing the correct statistical test for different types of variables; clear visulizations for data output; and website pages construction in github.
+We aim to analyze the suicide rate changes from 1999-2016 across different ages/races, create graphs to display the trends visually and conduct formal statistical analysis to test the significance of related affecting factors to age-specific death rate including sex, gender, race, age and etc. Coding challenges may include choosing the correct statistical test for different types of variables; clear visualizations for data output; and website pages construction in GitHub.
 
 #### Planned timeline
 
