--- a/p8105_fp_ds100_dataprocess.Rmd
+++ b/p8105_fp_ds100_dataprocess.Rmd
@@ -5,3 +5,30 @@ date: "11/5/2018"
 output: github_document
 ---
 
+```{r}
+library(tidyverse)
+```
+
+
+```{r}
+data_BRFSS = 
+  read_csv(file='./data/Behavioral_Risk_Factor_Surveillance_System__BRFSS__Prevalence_Data__2011_to_present_.csv')
+#data_homicide = 
+```
+
+```{r}
+data_BRFSS %>% 
+  select(., Question) %>%
+  distinct(.,)
+  
+distinct(data_BRFSS$Question)
+```
+
+```{r}
+brfss_data = brfss_raw %>% 
+   filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
+          break_out_category %in% c("Age Group", "Race/Ethnicity", "Gender")) %>% 
+   spread(key = break_out_category, break_out)
+View(brfss_data)
+```
+
