changed age intervals

--- a/p8105_fp_ds100_jl5296.md
+++ b/p8105_fp_ds100_jl5296.md
@@ -62,4 +62,6 @@ test_data %>%
   )
 ```
 
-<img src="p8105_fp_ds100_jl5296_files/figure-markdown_github/plot-1.png" width="90%" /> **Comment**: According to the graph, the estimated depression rate is the highest among people aged between 55-64 and the lowest for those above 65.
+<img src="p8105_fp_ds100_jl5296_files/figure-markdown_github/plot-1.png" width="90%" />
+
+**Comment**: According to the graph, the estimated depression rate is the highest among people aged between 55-64 and the lowest for those above 65.
