changed age intervals

--- a/p8105_fp_ds100_jl5296.md
+++ b/p8105_fp_ds100_jl5296.md
@@ -27,6 +27,7 @@ new_brfss_data = brfss_data %>%
 age_data = new_brfss_data %>% 
   filter(response == "Yes") %>% 
   mutate(tot_sample_size = ceiling(sample_size/(data_value/100))) %>% 
+  mutate(age_group = str_replace(age_group, "25-34", "25-44"), age_group = str_replace(age_group, "35-44", "25-44"), age_group = str_replace(age_group, "45-54", "45-64"),age_group = str_replace(age_group, "55-64", "45-64")，age_group = str_replace(age_group, "18-24", "<25")) %>% 
   select(year, state_city, age_group, sample_size, tot_sample_size, data_value, confidence_limit_low, confidence_limit_high) %>% 
   rename(depress_num = sample_size, depress_rate = data_value) %>% 
   group_by(age_group) %>%
@@ -64,4 +65,12 @@ test_data %>%
 
 <img src="p8105_fp_ds100_jl5296_files/figure-markdown_github/plot-1.png" width="90%" />
 
-**Comment**: According to the graph, the estimated depression rate is the highest among people aged between 55-64 and the lowest for those above 65.
+**Comment**: According to the graph, the estimated depression rate is the highest among people aged between 45-64 and the lowest for those above 65.
+
+### Injury Data
+
+#### Load dataset
+
+``` r
+injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv")
+```
