small edits made to figure

--- a/p8105_fp_ds100_jl5296.md
+++ b/p8105_fp_ds100_jl5296.md
@@ -108,8 +108,9 @@ test_data2 %>%
   ggplot(aes(x = age_group_years, y = estimate, color = age_group_years)) +
   geom_bar(stat = "identity", position = position_dodge(), width = .6) +
   geom_errorbar(aes(ymin = conf.low , ymax = conf.high), width = .2) +
+  theme(plot.title = element_text(hjust = .5)) +
   labs(
-    title = "Estimated suicide death rate(per 100,000 population) and CIs for each Age Category",
+    title = "Estimated suicide death rate(per 100,000 population) and CIs for \n each Age Category",
     x = "Age Group",
     y = "Estimated Suicide Death Rate(per 100,000 population)"
   ) +
