--- a/p8105_fp_ds100_JZ3036.md
+++ b/p8105_fp_ds100_JZ3036.md
@@ -1,29 +1,76 @@
----
-title: "p8105_fp_ds100_dataprocess"
-author: "Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu, Zhiqian Fang"
-date: "11/5/2018"
-output: github_document
----
+p8105\_fp\_ds100\_dataprocess
+================
+Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu, Zhiqian Fang
+11/5/2018
 
-```{r packages}
+``` r
 library(tidyverse)
 ```
 
-```{r data_import}
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.2.1 ──
+
+    ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
+    ## ✔ tibble  1.4.2     ✔ dplyr   0.7.8
+    ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
+    ## ✔ readr   1.1.1     ✔ forcats 0.3.0
+
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
 data_BRFSS = 
   read_csv(file = './data/brfss_data.csv')
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   year = col_integer(),
+    ##   sample_size = col_integer(),
+    ##   data_value = col_double(),
+    ##   confidence_limit_low = col_double(),
+    ##   confidence_limit_high = col_double(),
+    ##   display_order = col_integer()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
 data_IM = 
   read_csv(file = './data/NCHS_-_Injury_Mortality__United_States.csv')
 ```
 
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_integer(),
+    ##   Sex = col_character(),
+    ##   `Age group (years)` = col_character(),
+    ##   Race = col_character(),
+    ##   `Injury mechanism` = col_character(),
+    ##   `Injury intent` = col_character(),
+    ##   Deaths = col_integer(),
+    ##   Population = col_integer(),
+    ##   `Age Specific Rate` = col_double(),
+    ##   `Age Specific Rate Standard Error` = col_double(),
+    ##   `Age Specific Rate Lower Confidence Limit` = col_double(),
+    ##   `Age Specific Rate Upper Confidence Limit` = col_double(),
+    ##   `Age Adjusted Rate` = col_double(),
+    ##   `Age Adjusted Rate Standard Error` = col_double(),
+    ##   `Age Adjusted Rate Lower Confidence Limit` = col_double(),
+    ##   `Age Adjusted Rate Upper Confidence Limit` = col_double(),
+    ##   Unit = col_character()
+    ## )
+
 BRFSS data:
-```{r tidy_data_BRFSS}
+
+``` r
 data_BRFSS_JZ = data_BRFSS %>% 
   janitor::clean_names(.) %>% 
   select(., year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity)
 ```
 
-```{r BRFSS_year_areas}
+``` r
 data_BRFSS_JZ %>% 
   filter(., age_group != 'NA') %>% 
   group_by(., year, locationdesc, response) %>% 
@@ -41,7 +88,9 @@ data_BRFSS_JZ %>%
   ggtitle('Depression Prevalence from 2011-2016 by 54 Areas in US')
 ```
 
-```{r BRFSS_year_age}
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/BRFSS_year_areas-1.png)
+
+``` r
 data_BRFSS_JZ %>% 
   filter(., age_group != 'NA') %>% 
   group_by(., year, response, age_group) %>% 
@@ -64,7 +113,9 @@ data_BRFSS_JZ %>%
   ggtitle('Depression Prevalence from 2011-2016 by Age Groups')
 ```
 
-```{r BRFSS_year_gender}
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/BRFSS_year_age-1.png)
+
+``` r
 data_BRFSS_JZ %>% 
   filter(., gender != 'NA') %>% 
   group_by(., year, gender, response) %>% 
@@ -82,7 +133,9 @@ data_BRFSS_JZ %>%
   ggtitle('Depression Prevalence from 2011-2016 by Genders')
 ```
 
-```{r BRFSS_year_race}
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/BRFSS_year_gender-1.png)
+
+``` r
 data_BRFSS_JZ %>% 
   filter(., race_ethnicity != 'NA') %>% 
   group_by(., year, response, race_ethnicity) %>% 
@@ -107,12 +160,13 @@ data_BRFSS_JZ %>%
   theme(legend.position = 'right', legend.text = element_text(size=6), legend.box = 'vertical',
         legend.key.size = unit(1, 'cm')) +
   ggtitle('Depression Prevalence from 2011-2016 by Race')
-  
 ```
 
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/BRFSS_year_race-1.png)
 
 IM data:
-```{r tidy_data_IM}
+
+``` r
 data_IM_JZ = data_IM %>% 
   janitor::clean_names(.) %>% 
   filter(., injury_intent == 'Suicide',
@@ -127,7 +181,12 @@ data_IM_JZ %>%
   distinct(.)
 ```
 
-```{r IM_year_age}
+    ## # A tibble: 1 x 1
+    ##   injury_mechanism
+    ##   <chr>           
+    ## 1 All Mechanisms
+
+``` r
 data_IM_JZ %>% 
   group_by(., year, age_group_years) %>% 
   summarize(., sum_deaths = sum(deaths), population = sum(population)) %>% 
@@ -153,8 +212,9 @@ data_IM_JZ %>%
   ggtitle('Suicide Death Rate from 2011-2016 by Age')
 ```
 
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/IM_year_age-1.png)
 
-```{r IM_year_gender}
+``` r
 data_IM_JZ %>% 
   group_by(., year, sex) %>% 
   summarize(., sum_deaths = sum(deaths), population = sum(population)) %>% 
@@ -170,8 +230,9 @@ data_IM_JZ %>%
   ggtitle('Suicide Death Rate from 2011-2016 by Age')
 ```
 
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/IM_year_gender-1.png)
 
-```{r IM_year_race}
+``` r
 data_IM_JZ %>% 
   group_by(., year, race) %>%
   summarize(., sum_deaths = sum(deaths), population = sum(population)) %>% 
@@ -187,3 +248,4 @@ data_IM_JZ %>%
   ggtitle('Suicide Death Rate from 2011-2016 by Age')
 ```
 
+![](p8105_fp_ds100_JZ3036_files/figure-markdown_github/IM_year_race-1.png)
