Change race factors order.

--- a/p8105_fp_ds100_JZ3036.md
+++ b/p8105_fp_ds100_JZ3036.md
@@ -152,7 +152,9 @@ data_BRFSS_JZ %>%
   spread(., key = response, value = sample_size) %>% 
   mutate(., prevalence = (Yes / (Yes + No)),
     ci_low = prevalence - qnorm(.975) * sqrt(prevalence * (1 - prevalence) / (Yes + No)),
-    ci_high = prevalence + qnorm(.975) * sqrt(prevalence * (1 - prevalence) / (Yes + No))) %>% 
+    ci_high = prevalence + qnorm(.975) * sqrt(prevalence * (1 - prevalence) / (Yes + No))) %>%
+  mutate(., race = forcats::fct_relevel(race,
+                     c('Hispanic', 'Black, non-Hispanic', 'White, non-Hispanic', 'Other'))) %>%
   ggplot(., aes(x = year, y = prevalence, color = race)) +
   geom_point() +
   geom_line() +
