--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -3,4 +3,12 @@ p8105\_fp\_ds100\_yg2625
 Yue Gu
 11/30/2018
 
+#### Load BRFSS & Injury Data
 
+``` r
+brfss_data = read_csv("./data/brfss_data.csv") %>% 
+  janitor::clean_names()
+
+injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv") %>% 
+  janitor::clean_names()
+```
