Leave injury data with only all mech and suicide

--- a/p8105_fp_ds100_yg2625.Rmd
+++ b/p8105_fp_ds100_yg2625.Rmd
@@ -16,6 +16,8 @@ brfss_data = read_csv("./data/brfss_data.csv") %>%
   janitor::clean_names()
 
 injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  filter(injury_mechanism == "All Mechanisms",
+         injury_intent == "Suicide")
 
 ```
