refactor race, age and sex

--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -22,5 +22,8 @@ new_injury =
          race != "All races",
          sex != "Both sexes") %>%
   mutate(suicide_dr = (deaths / population) * 100000) %>% 
-  select(year, sex, age_group_years, race, suicide_dr)
+  select(year, sex, age_group_years, race, suicide_dr) %>% 
+  mutate(sex = as.factor(ifelse(sex == "Male", 0, 1)),
+         race = as.factor(ifelse(race == "Non-Hispanic white", "white", "non-white")),
+         age_group_years = as.factor(age_group_years))
 ```
